syntax = "proto3";

option java_package = "com.erksystem.protobuf";
option java_outer_classname = "Erksystem";
option java_multiple_files = true;

enum ServiceType {
  SERVICE_UNKNOWN = 0;
  SERVICE_PHYSIOLOGY = 1;
  SERVICE_SPEECH = 2;
  SERVICE_VIDEO = 3;
  SERVICE_PHYSIOLOGY_SPEECH = 4;
  SERVICE_PHYSIOLOGY_VIDEO = 5;
  SERVICE_SPEECH_VIDEO = 6;
  SERVICE_PHYSIOLOGY_SPEECH_VIDEO = 7;
  SERVICE_KNOWLEDGE = 8;
  SERVICE_ALL = 9;
  SERVICE_RESERVED1 = 10;
  SERVICE_RESERVED2 = 11;
}

// Body
message AddServiceProviderInfoRQ{
  string OrgName = 1;
  string OrgPwd = 2;
  string ServiceDuration = 3;
  int32 UserNumber = 4;
  ServiceType ServiceType = 5;
}
message AddServiceProviderInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
  string OrgName = 3;
  int32 OrgId = 4;
}
message DelServiceProviderInfoRQ{
  string OrgName = 1;
  string OrgPwd = 2;
}
message DelServiceProviderInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
}
message UpdateServiceProviderInfoRQ{
  string OrgName = 1;
  string OrgPwd = 2;
  string ServiceDuration = 3;
  int32 UserNumber = 4;
  ServiceType ServiceType = 5;
}
message UpdateServiceProviderInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
  string OrgName = 3;
  int32 OrgId = 4;
}
message AddUserInfoRQ{
  string OrgName = 1;
  string OrgPwd = 2;
  string ServiceDuration = 3;
  int32 Age = 4;
  int32 Sex = 5;
  int32 UserType = 6;
  ServiceType ServiceType = 7;
}
message AddUserInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
  string OrgName = 3;
  int32 UserId = 4;
}
message DelUserInfoRQ{
  string OrgName = 1;
  string UserName = 2;
  string UserPwd = 3;
}
message DelUserInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
  string OrgName = 3;
  string UserName = 4;
}
message UpdateUserInfoRQ{
  string OrgName = 1;
  string UserName = 2;
  string UserPwd = 3;
  string ServiceDuration = 4;
  int32 Age = 5;
  int32 Sex = 6;
  int32 UserType = 7;
  ServiceType ServiceType = 8;
}
message UpdateUserInfoRP{
  int32 ReasonCode = 1;
  string Reason = 2;
  string OrgName = 3;
  string UserName = 4;
}

message ErkProvMsg{
  oneof body{
    AddServiceProviderInfoRQ AddServiceProviderInfoRQ = 1;
    AddServiceProviderInfoRP AddServiceProviderInfoRP = 2;
    DelServiceProviderInfoRQ DelServiceProviderInfoRQ = 3;
    DelServiceProviderInfoRP DelServiceProviderInfoRP = 4;
    UpdateServiceProviderInfoRQ UpdateServiceProviderInfoRQ = 5;
    UpdateServiceProviderInfoRP UpdateServiceProviderInfoRP = 6;
    AddUserInfoRQ AddUserInfoRQ = 7;
    AddUserInfoRP AddUserInfoRP = 8;
    DelUserInfoRQ DelUserInfoRQ = 9;
    DelUserInfoRP DelUserInfoRP = 10;
    UpdateUserInfoRQ UpdateUserInfoRQ = 11;
    UpdateUserInfoRP UpdateUserInfoRP = 12;
  }
}
